<resources>
    <string name="app_name">Watering Can</string>
    <string name="on_button_text">ON</string>
    <string name="off_button_text">OFF</string>
    <string name="init_button_text">INIT</string>
    <string name="cancel_button">Close Connection</string>
    <string name="settings_menu_item">Settings</string>
    <string name="toast_connection_success">Connected to device</string>
    <string name="toast_connection_failure">Can\'t connect to device</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Watering Can</string>
    <string name="nav_header_subtitle">Device not selected</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="number_info">Moisture Sensor Data</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <string name="bluetooth_icon_name">Bluetooth Icon</string>
    <string name="no_bluetooth_caption">You must have Bluetooth enabled to view this page.</string>
    <string name="no_bluetooth_heading">Enable Bluetooth</string>
    <string name="no_bluetooth_image_content">Bluetooth Disabled</string>
    <string name="button_retry_text">RETRY</string>
    <string name="menu_nav_main">Main Menu</string>
    <string name="menu_nav_plants">Plants</string>
    <string name="menu_nav_bluetooth">Bluetooth Devices</string>
    <string name="preference_file_key">lestera.me.mypproject.PREFERENCE_FILE_KEY</string>
    <string name="no_device_selected">No bluetooth device is selected</string>
    <string name="plant_add_text">Add a plant</string>
    <string name="card_list_fragment_tag">card_list_fragment</string>
    <string name="pick_image_intent_text">Select a photo or take a new one</string>
    <string name="plant_fragment_button_save">SAVE</string>
    <string name="menu_delete_all">Delete all plants</string>
    <string name="plant_dryness_limit">Plant \"Dryness\" Limit:</string>
</resources>
